--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="search.css">
     </head>
-    <body>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+    <body style="background-color: rgb(32, 30, 30);">
+        <div id="links">
+            <div><a href="image_search.html">Google Image Search</a>
+            </div>
+            <div><a href="advanced_search.html">Google Advanced Search</a>
+            </div>
+        </div>
+        
+        <h1 id="header">Google</h1>
+
+        <form class="search-form" action="https://google.com/search">
+            <input id="search-box" type="text" name="q">
+            <input id="search-button" type="submit" value="Google Search">
         </form>
+        <button id="lucky" onclick="window.location.href='https://doodles.google/'">I'm Feeling Lucky</button>
     </body>
 </html>
