--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Search</title>
         <link rel="stylesheet" href="search.css">
     </head>
-    <body style="background-color: rgb(32, 30, 30);">
+    <body style="background-color: #202124;">
         <div id="links">
             <div><a href="image.html">Google Image Search</a>
             </div>
